--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "tailwindcss": "^1.6.2",
     "vue-template-compiler": "^2.6.11",
     "yargs": "^15.4.1"
+  },
+  "dependencies": {
+    "alpinejs": "^2.5.0",
+    "imagemin": "^7.0.1",
+    "imagemin-webp": "^6.0.0"
   }
 }
